version/0.15/_sources/api/ansys/additive/core/geometry_file/BuildFile.rst.txt




BuildFile
=========

.. py:class:: BuildFile(type: MachineType, path: str)
   :canonical: ansys.additive.core.geometry_file.BuildFile




Provides the build file description.












Overview
--------
.. py:currentmodule:: BuildFile
.. tab-set::




    .. tab-item:: Properties

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~type`
            - Additive manufacturing machine type this file is for.
          * - :py:attr:`~path`
            - Path of the ZIP file containing the build instruction file, geometry






Import detail
-------------

.. code-block:: python

    from ansys.additive.core.geometry_file import BuildFile


Property detail
---------------
.. py:property:: type
   :canonical: ansys.additive.core.geometry_file.BuildFile.type
   :type: MachineType


   
   Additive manufacturing machine type this file is for.
















   ..
       !! processed by numpydoc !!

.. py:property:: path
   :canonical: ansys.additive.core.geometry_file.BuildFile.path
   :type: str


   
   Path of the ZIP file containing the build instruction file, geometry
   STL file, and optional support STL files.
















   ..
       !! processed by numpydoc !!





